syntax = "proto3";

package message.v1;

import "google/protobuf/timestamp.proto";

// -------------------------------
// ENUMS
// -------------------------------



// -------------------------------
// MESSAGES
// -------------------------------


message Message {
  string message_id = 1;
  string conversation_id = 2;
  string user_id = 3;
  int64 server_seq = 4;
  string thread_root_id = 5;
  string text = 6;
  string type = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  bool edited = 10;
  bool deleted = 11;
}


message AckOffset {
  string conversation_id = 1;
  string user_id = 2;
  int64 acked_seq = 3;
  string status = 4;
  string client_msg_id = 5;
  google.protobuf.Timestamp acked_at = 6 ;
}


message CreateMessageRequest {
  Message message = 1;
  string client_msg_id = 2;

}
message CreateMessageResponse {
  Message message = 1;
  AckOffset ack_offset = 2;
  bool success = 3;

}

// -------------------------------
// SERVICES
// -------------------------------

service MessageService {
  rpc CreateMessage (CreateMessageRequest) returns (CreateMessageResponse);
  rpc StreamCreateMessages (stream CreateMessageRequest) returns (stream CreateMessageResponse);
  rpc StreamAckOffsets (stream AckOffset) returns (stream AckOffset);
}